--- a/app/src/main/res/layout/activity_detail_board.xml
+++ b/app/src/main/res/layout/activity_detail_board.xml
@@ -240,16 +240,33 @@
                         <RelativeLayout
                             android:id="@+id/rl_item_board_like"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_centerVertical="true">
 
-                            <ImageView
-                                android:id="@+id/iv_item_board_like"
+                            <RelativeLayout
+                                android:layout_centerVertical="true"
+                                android:id="@+id/rl_item_board_like_ic"
+                                android:layout_alignParentLeft="true"
+
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentTop="true"
-                                android:layout_marginTop="0dp"
-                                android:src="@drawable/ic_like" />
+                                android:layout_height="wrap_content">
+
+                                <ImageView
+                                    android:id="@+id/iv_item_board_like"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+
+                                    android:src="@drawable/ic_like" />
+                                <ImageView
+                                    android:visibility="gone"
+                                    android:id="@+id/iv_item_board_like_on"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+
+                                    android:src="@drawable/ic_like_on" />
+
+                            </RelativeLayout>
+
 
                             <TextView
                                 android:id="@+id/tv_item_board_like_cnt"
@@ -257,7 +274,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_marginLeft="5dp"
-                                android:layout_toRightOf="@id/iv_item_board_like"
+                                android:layout_toRightOf="@id/rl_item_board_like_ic"
                                 android:letterSpacing="-0.01"
                                 android:lineSpacingExtra="12sp"
                                 android:text="999+"
@@ -269,13 +286,14 @@
                         <RelativeLayout
                             android:id="@+id/rl_item_board_comment"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_centerVertical="true"
                             android:layout_marginStart="15.7dp"
                             android:layout_toRightOf="@id/rl_item_board_like">
 
                             <ImageView
                                 android:id="@+id/iv_item_board_comment"
+                                android:layout_centerVertical="true"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:src="@drawable/ic_reple" />
