--- a/app/src/main/res/drawable-hdpi/round.xml
+++ b/app/src/main/res/drawable-hdpi/round.xml
@@ -3,8 +3,8 @@
 <item>
 <shape android:shape="rectangle">
     <corners android:radius="10dip" />
-    <solid android:color="#ebf8f8f8" />
-    <stroke android:width="1dp" android:color="#2f2f2f"/>
+    <solid android:color="#ffffff" />
+    <stroke android:width="0dp" android:color="#2f2f2f"/>
 </shape>
 </item>
 </layer-list>
