--- a/app/src/main/res/layout/activity_lounge_reservation.xml
+++ b/app/src/main/res/layout/activity_lounge_reservation.xml
@@ -223,13 +223,14 @@ e
                     android:layout_height="wrap_content" />
             </RelativeLayout>
 
+
             <ImageView
                 android:id="@+id/btn_lounge_event_detail_join"
                 android:visibility="visible"
                 android:layout_marginTop="24dp"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:background="@drawable/bt_join"
+                android:background="@drawable/bt_march_comming_soon"
                 android:layout_below="@+id/rl_lounge_detail_program"
                 >
             </ImageView>
