--- a/app/src/main/res/layout/fragment_lounge.xml
+++ b/app/src/main/res/layout/fragment_lounge.xml
@@ -50,13 +50,11 @@
 
         </RelativeLayout>
     <RelativeLayout
-        android:background="#ffffff"
-        android:layout_width="191dp"
-        android:layout_height="160dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="96dp"
-        android:layout_marginLeft="26dp"
+        android:layout_below="@+id/rl_top_bar_lounge"
+        android:id="@+id/rl_lounge_club_introduce"
+        android:background="#10000000"
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
         android:orientation="vertical"
         >
         <TextView
@@ -69,8 +67,8 @@
             android:lineSpacingExtra="2sp"
             android:gravity="center_horizontal"
             android:text="CLUB"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginLeft="26dp"
+            android:layout_marginTop="6dp"
             />
         <TextView
             android:fontFamily="@font/noto_regular"
@@ -82,11 +80,17 @@
             android:letterSpacing="-0.13"
             android:lineSpacingExtra="7sp"
             android:layout_marginLeft="19.5dp"
-            android:layout_marginTop="71dp"
+            android:layout_marginTop="49dp"
             android:text="관심 있는 클럽에 가입 해
 멤버들과 더욱 긴밀한 교류를
 경험해 보세요."
             />
+        <View
+            android:layout_marginTop="120dp"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="#f7746b"/>
+
     </RelativeLayout>
 
     </RelativeLayout>
