--- a/app/src/main/res/layout/rv_item_directory_searching_result.xml
+++ b/app/src/main/res/layout/rv_item_directory_searching_result.xml
@@ -1,31 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/rl_image_directory_searching"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
+    android:layout_marginTop="8dp"
 android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffffff">
+    android:layout_width="168dp"
+    android:layout_height="205dp"
+    android:background="@drawable/directory_box_selector">
     <TextView
+        android:layout_marginTop="11dp"
+        android:layout_marginLeft="6dp"
+        android:id="@+id/tv_item_searching_team"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="10sp"
+        android:textColor="#f7746b"
+        android:letterSpacing="-0.01"
+        android:lineSpacingExtra="5sp"
+        android:textStyle="bold"
+        android:text="소속 |"
+        />
+    <TextView
+        android:layout_below="@id/tv_item_searching_team"
         android:id="@+id/tv_item_directory_searching_team_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="6sp"
         android:textColor="#525252"
-        android:textSize="15sp"
+        android:textSize="9sp"
         android:layout_marginLeft="8dp"
         android:text="깅스" />
-
     <TextView
-        android:layout_toRightOf="@+id/tv_item_directory_searching_team_name"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="6dp"
+        android:layout_below="@id/tv_item_directory_searching_team_name"
+        android:id="@+id/tv_item_searching_part"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="10sp"
+        android:textColor="#f7746b"
+        android:letterSpacing="-0.01"
+        android:lineSpacingExtra="5sp"
+        android:textStyle="bold"
+        android:text="역할 |"/>
+    <TextView
+        android:layout_marginLeft="8dp"
+       android:layout_below="@+id/tv_item_searching_part"
         android:id="@+id/tv_item_directory_searching_role"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="6sp"
-        android:textSize="15sp"
+        android:textSize="9sp"
         android:textColor="#525252"
         android:text="PM" />
     <de.hdodenhof.circleimageview.CircleImageView
