--- a/app/src/main/res/layout/activity_detail_board.xml
+++ b/app/src/main/res/layout/activity_detail_board.xml
@@ -19,23 +19,24 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="66.5dp">
+            android:layout_height="60dp">
 
             <RelativeLayout
                 android:id="@+id/rl_detail_board_title"
                 android:layout_width="match_parent"
                 android:layout_height="22dp"
-                android:layout_marginTop="13dp"
+                android:layout_marginTop="12dp"
                 >
 
                 <TextView
+                    android:fontFamily="@font/noto_bold"
                     android:id="@+id/tv_detail_board_category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginStart="18.5dp"
-                    android:layout_marginTop="0dp"
+                    android:layout_marginTop="-9dp"
                     android:letterSpacing="-0.01"
                     android:lineSpacingExtra="1sp"
                     android:text="질문"
@@ -50,10 +51,12 @@
                     android:layout_centerVertical="true"
                     android:layout_marginStart="10dp"
                     android:layout_toRightOf="@+id/tv_detail_board_category"
-                    android:background="#999999" />
+                    android:background="@color/colorPrimary" />
 
 
                 <TextView
+                    android:layout_marginTop="-20dp"
+                    android:fontFamily="@font/noto_medium"
                     android:id="@+id/tv_detail_board_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -75,9 +78,11 @@
                 android:layout_height="30dp"
                 android:layout_below="@id/rl_detail_board_title"
                 android:layout_marginStart="63dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginTop="-3dp">
 
                 <TextView
+                    android:fontFamily="@font/noto_regular"
                     android:id="@+id/tv_detail_board_tag"
                     android:layout_width="175dp"
                     android:layout_height="match_parent"
@@ -89,6 +94,8 @@
             </LinearLayout>
 
             <TextView
+                android:layout_marginTop="-4dp"
+                android:fontFamily="@font/noto_regular"
                 android:id="@+id/tv_detail_board_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -115,6 +122,7 @@
             android:fillViewport="true"
             >
             <LinearLayout
+                android:layout_marginTop="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -138,6 +146,7 @@
                         android:layout_marginBottom="10dp">
 
                         <TextView
+                            android:fontFamily="@font/noto_regular"
                             android:id="@+id/tv_detail_board_contents_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -175,6 +184,7 @@
                         android:layout_centerVertical="true"/>
 
                     <TextView
+                        android:fontFamily="@font/noto_medium"
                         android:id="@+id/tv_item_board_profile_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -189,20 +199,22 @@
                         android:textSize="12sp" />
 
                     <View
+                        android:id="@+id/tv_item_board_view"
                         android:layout_width="1dp"
-                        android:layout_height="7.6dp"
+                        android:layout_height="13dp"
                         android:layout_centerVertical="true"
                         android:layout_toRightOf="@+id/tv_item_board_profile_name"
                         android:layout_marginStart="7.2dp"
                         android:background="#999999" />
 
                     <TextView
+                        android:fontFamily="@font/noto_regular"
                         android:id="@+id/tv_item_board_profile_team"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginStart="117dp"
+                        android:layout_toRightOf="@id/tv_item_board_view"
+                        android:layout_marginStart="7.2dp"
                         android:letterSpacing="-0.01"
                         android:lineSpacingExtra="6sp"
                         android:textColor="#525252"
@@ -211,14 +223,18 @@
 
 
                     <TextView
+                        android:fontFamily="@font/noto_regular"
                         android:id="@+id/tv_item_board_profile_slash"
                         android:layout_centerVertical="true"
                         android:layout_toRightOf="@+id/tv_item_board_profile_team"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="1dp"
+                        android:layout_marginRight="1dp"
                         android:text="/"/>
 
                     <TextView
+                        android:fontFamily="@font/noto_regular"
                         android:id="@+id/tv_item_board_profile_role"
                         android:layout_toRightOf="@+id/tv_item_board_profile_slash"
                         android:layout_centerVertical="true"
@@ -244,6 +260,7 @@
                             android:layout_centerVertical="true">
 
                             <ImageView
+                                android:layout_centerVertical="true"
                                 android:id="@+id/iv_item_board_like"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -252,6 +269,7 @@
                                 android:src="@drawable/ic_like" />
 
                             <TextView
+                                android:fontFamily="@font/noto_regular"
                                 android:id="@+id/tv_item_board_like_cnt"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -275,12 +293,14 @@
                             android:layout_toRightOf="@id/rl_item_board_like">
 
                             <ImageView
+                                android:layout_centerVertical="true"
                                 android:id="@+id/iv_item_board_comment"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:src="@drawable/ic_reple" />
 
                             <TextView
+                                android:fontFamily="@font/noto_regular"
                                 android:id="@+id/tv_item_board_comment_cnt"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -363,6 +383,7 @@
             android:layout_gravity="center"
             />
         <EditText
+            android:fontFamily="@font/noto_regular"
             android:id="@+id/detail_board_reboard_edit"
             android:layout_width="255dp"
             android:layout_height="32dp"
