--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,21 +26,21 @@
         android:layout_marginTop="52dp"
         android:layout_width="324dp"
         android:layout_height="50dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:background="@drawable/signup2_round_background"
         >
         <TextView
-            android:layout_marginTop="15dp"
+            android:fontFamily="@font/noto_regular"
             android:layout_marginLeft="21dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textColor="#333333"
             android:lineSpacingExtra="5sp"
-            android:gravity="center_horizontal"
             android:text="이메일"/>
     <EditText
-        android:layout_marginTop="16dp"
+        android:fontFamily="@font/noto_regular"
         android:background="@null"
         android:id="@+id/et_login_id"
         android:layout_marginLeft="32dp"
@@ -54,11 +54,12 @@
         android:layout_width="324dp"
         android:layout_height="50dp"
         android:layout_marginTop="18dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:background="@drawable/signup2_round_background"
         >
         <TextView
-            android:layout_marginTop="15dp"
+            android:fontFamily="@font/noto_regular"
             android:layout_marginLeft="21dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -68,8 +69,8 @@
             android:gravity="center_horizontal"
             android:text="비밀번호"/>
         <EditText
+            android:fontFamily="@font/noto_regular"
             android:textSize="14dp"
-            android:layout_marginTop="16dp"
             android:background="@null"
             android:id="@+id/et_login_pw"
             android:layout_marginLeft="18dp"
@@ -97,15 +98,16 @@
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_height="18dp">
+        android:gravity="center_vertical"
+        android:layout_height="wrap_content">
         <TextView
+            android:fontFamily="@font/noto_regular"
             android:layout_marginRight="26dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
             android:textColor="#5c5c5c"
             android:lineSpacingExtra="4sp"
-            android:layout_gravity="center"
            android:text="자동 로그인"
             />
 <CheckBox
