--- a/app/src/main/res/layout/activity_sign_up1.xml
+++ b/app/src/main/res/layout/activity_sign_up1.xml
@@ -8,122 +8,178 @@
    android:background="#f9f9f9"
     tools:context=".Moohyeon.Activity.SignUp1Activity">
     <TextView
+        android:fontFamily="@font/noto_bold"
         android:gravity="center"
         android:background="@drawable/top"
         android:layout_width="match_parent"
         android:layout_height="57dp"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:textColor="#000000"
         android:lineSpacingExtra="6sp"
         android:text="이용약관"
         />
     <RelativeLayout
-        android:layout_marginTop="27dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <TextView
-
-            android:layout_alignParentLeft="true"
-            android:textSize="14sp"
-            android:textColor="#000000"
-            android:lineSpacingExtra="6sp"
-            android:id="@+id/tv_sign_up_personal_info"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="개인정보 수집 및 이용"/>
-        <CheckBox
-            android:gravity="center"
-            android:layout_alignParentRight="true"
-            android:layout_width="25dp"
-            android:layout_height="17dp"
-            android:id="@+id/cb_sign_up1_personal_check"/>
+            android:id="@+id/cb_sign_up1_one">
+
+            <TextView
+                android:fontFamily="@font/noto_regular"
+                android:layout_alignParentLeft="true"
+                android:textSize="14sp"
+                android:textColor="#000000"
+                android:lineSpacingExtra="6sp"
+                android:id="@+id/tv_sign_up_personal_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="개인정보 수집 및 이용"/>
+            <CheckBox
+                android:layout_marginLeft="153dp"
+                android:layout_width="25dp"
+                android:layout_height="17dp"
+                android:id="@+id/cb_sign_up1_personal_check"/>
+        </LinearLayout>
         <ScrollView
-            android:layout_below="@+id/tv_sign_up_personal_info"
-            android:layout_marginTop="10dp"
+            android:layout_below="@id/cb_sign_up1_one"
             android:layout_width="wrap_content"
-            android:layout_height="80dp">
+            android:layout_height="90dp">
 
         <TextView
+            android:paddingTop="8dp"
+            android:paddingLeft="11dp"
+            android:paddingBottom="5dp"
+            android:paddingRight="11dp"
+            android:fontFamily="@font/noto_regular"
             android:background="@drawable/back"
-            android:layout_width="350dp"
-            android:layout_height="80dp"
-            android:text="내용을입력하세요용을입력하세요내용을용을입력하세요내용을용을입력하세요내용을용을입력하세요내용을용을입력하세요내용을용을입력하세요내용을용을입력하세요내용을용을입력하세요내용을용을입력하세요내용을내용을입력하세요~내용을내용을입력하세요~내용을내용을입력하세요~내용을내용을입력하세요~내용을~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~"
+            android:layout_width="300dp"
+            android:layout_height="120dp"
+            android:text="깅스 멤버십 원칙 동의
+
+1. 깅스의 멤버들은 더 나은 사회와 미래를 만들기 위해 크리에이티브를 제안하고 실행하여 새 시대의 혁신을 일구어내며, 연결과 공유의 가치를 믿고 인류의 가능성을 위해 행동합니다. 깅스는 언제나 정직하게 모든 과정과 결과를 사회와 나누며 공동체의 가치를 실현하겠습니다.
+
+2. 깅스의 멤버들은 공동선을 해치지 않습니다. 다양성을 인정하고 모든 멤버의 개성과 인격을 존중합니다. 깅스의 멤버는 하나된 깅스의 가치로 모인 공동체의 일원입니다. 무한한 적자생존의 경쟁이 아닌 협력과 교류를 통해 서로를 돕고 더 나은 선순환 가치를 만들어냅니다. 극단성과 차별을 경계하며, 강요와 선동, 자극적인 메시지, 비방과 욕설, 허위사실 유포, 무단권리남용, 저작권 침해 등 다른 멤버와 사회의 올바른 가치를 말살하는 행위는 일체 하지 않습니다.
+
+3. 깅스는 누구나 타고난 환경과 관계없이 꿈을 꿀 수 있는 사회를 만들기 위해 존재하며, 스스로 함께 업을 만들어갈 수 있는 업의 생태계의 건설을 목표로 합니다. 저희는 홀로 존재하는 것이 아니며, 멤버들과 함께 만들어갈 때 비로소 의미가 있습니다. 깅스는  언제나, 마지막까지 멤버들과 함께할 것입니다. 깅스의 이용약관과 개인정보보호정책, 운영원칙을 비롯하여 모든 제품과 서비스의 개선을 위해 소통하겠습니다.
+"
             android:layout_centerInParent="true"
         />
 
         </ScrollView>
     </RelativeLayout>
     <RelativeLayout
-        android:layout_marginTop="15dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <TextView
+        <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cb_sign_up1_two">
 
+        <TextView
+            android:fontFamily="@font/noto_regular"
             android:layout_alignParentLeft="true"
             android:textSize="14sp"
             android:textColor="#000000"
+            android:lineSpacingExtra="6sp"
             android:id="@+id/tv_sign_up1_using_agree"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이용 약관 동의"/>
+            android:text="이용약관 동"/>
         <CheckBox
-            android:layout_alignParentRight="true"
+            android:layout_marginLeft="207dp"
             android:layout_width="25dp"
             android:layout_height="17dp"
             android:id="@+id/cb_sign_up1_using_agree_check"/>
+    </LinearLayout>
 
         <ScrollView
-            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
-            android:layout_below="@+id/tv_sign_up1_using_agree"
-            android:layout_height="80dp">
+            android:layout_below="@+id/cb_sign_up1_two"
+            android:layout_height="90dp">
 
         <TextView
+            android:paddingTop="5dp"
+            android:paddingLeft="11dp"
+            android:paddingBottom="5dp"
+            android:paddingRight="11dp"
+            android:fontFamily="@font/noto_regular"
             android:background="@drawable/back"
-            android:layout_width="350dp"
-            android:layout_height="80dp"
-            android:text="내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~"
+            android:layout_width="300dp"
+            android:layout_height="120dp"
+            android:text="깅스 멤버십 원칙 동의
+
+1. 깅스의 멤버들은 더 나은 사회와 미래를 만들기 위해 크리에이티브를 제안하고 실행하여 새 시대의 혁신을 일구어내며, 연결과 공유의 가치를 믿고 인류의 가능성을 위해 행동합니다. 깅스는 언제나 정직하게 모든 과정과 결과를 사회와 나누며 공동체의 가치를 실현하겠습니다.
+
+2. 깅스의 멤버들은 공동선을 해치지 않습니다. 다양성을 인정하고 모든 멤버의 개성과 인격을 존중합니다. 깅스의 멤버는 하나된 깅스의 가치로 모인 공동체의 일원입니다. 무한한 적자생존의 경쟁이 아닌 협력과 교류를 통해 서로를 돕고 더 나은 선순환 가치를 만들어냅니다. 극단성과 차별을 경계하며, 강요와 선동, 자극적인 메시지, 비방과 욕설, 허위사실 유포, 무단권리남용, 저작권 침해 등 다른 멤버와 사회의 올바른 가치를 말살하는 행위는 일체 하지 않습니다.
+
+3. 깅스는 누구나 타고난 환경과 관계없이 꿈을 꿀 수 있는 사회를 만들기 위해 존재하며, 스스로 함께 업을 만들어갈 수 있는 업의 생태계의 건설을 목표로 합니다. 저희는 홀로 존재하는 것이 아니며, 멤버들과 함께 만들어갈 때 비로소 의미가 있습니다. 깅스는  언제나, 마지막까지 멤버들과 함께할 것입니다. 깅스의 이용약관과 개인정보보호정책, 운영원칙을 비롯하여 모든 제품과 서비스의 개선을 위해 소통하겠습니다.
+"
             android:layout_centerInParent="true"
             />
         </ScrollView>
     </RelativeLayout>
     <RelativeLayout
-        android:layout_marginTop="15dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/cb_sign_up1_three">
+
         <TextView
+            android:fontFamily="@font/noto_regular"
+            android:layout_alignParentLeft="true"
             android:textSize="14sp"
             android:textColor="#000000"
-            android:layout_alignParentLeft="true"
+            android:lineSpacingExtra="6sp"
             android:id="@+id/tv_sign_up1_membership_agree"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="멤버십 원칙 동의"/>
+        <CheckBox
+            android:layout_marginLeft="180dp"
+            android:layout_width="25dp"
+            android:layout_height="17dp"
+            android:id="@+id/cb_sign_up1_membership_agree_check"/>
+        </LinearLayout>
         <ScrollView
-            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
-            android:layout_below="@+id/tv_sign_up1_membership_agree"
-            android:layout_height="80dp">
+            android:layout_below="@+id/cb_sign_up1_three"
+            android:layout_height="90dp">
         <TextView
+            android:paddingTop="5dp"
+            android:paddingLeft="11dp"
+            android:paddingBottom="5dp"
+            android:paddingRight="11dp"
+            android:fontFamily="@font/noto_regular"
             android:background="@drawable/back"
-            android:layout_width="350dp"
-            android:layout_height="80dp"
-            android:text="내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용내용을입력하세요~내용을입력하세요~내용내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~내용을입력하세요~"
+            android:layout_width="300dp"
+            android:layout_height="120dp"
+            android:text="깅스 멤버십 원칙 동의
+
+1. 깅스의 멤버들은 더 나은 사회와 미래를 만들기 위해 크리에이티브를 제안하고 실행하여 새 시대의 혁신을 일구어내며, 연결과 공유의 가치를 믿고 인류의 가능성을 위해 행동합니다. 깅스는 언제나 정직하게 모든 과정과 결과를 사회와 나누며 공동체의 가치를 실현하겠습니다.
+
+2. 깅스의 멤버들은 공동선을 해치지 않습니다. 다양성을 인정하고 모든 멤버의 개성과 인격을 존중합니다. 깅스의 멤버는 하나된 깅스의 가치로 모인 공동체의 일원입니다. 무한한 적자생존의 경쟁이 아닌 협력과 교류를 통해 서로를 돕고 더 나은 선순환 가치를 만들어냅니다. 극단성과 차별을 경계하며, 강요와 선동, 자극적인 메시지, 비방과 욕설, 허위사실 유포, 무단권리남용, 저작권 침해 등 다른 멤버와 사회의 올바른 가치를 말살하는 행위는 일체 하지 않습니다.
+
+3. 깅스는 누구나 타고난 환경과 관계없이 꿈을 꿀 수 있는 사회를 만들기 위해 존재하며, 스스로 함께 업을 만들어갈 수 있는 업의 생태계의 건설을 목표로 합니다. 저희는 홀로 존재하는 것이 아니며, 멤버들과 함께 만들어갈 때 비로소 의미가 있습니다. 깅스는  언제나, 마지막까지 멤버들과 함께할 것입니다. 깅스의 이용약관과 개인정보보호정책, 운영원칙을 비롯하여 모든 제품과 서비스의 개선을 위해 소통하겠습니다.
+"
             android:layout_centerInParent="true"
             />
         </ScrollView>
-        <CheckBox
-            android:layout_alignParentRight="true"
-            android:layout_width="25dp"
-            android:layout_height="17dp"
-            android:id="@+id/cb_sign_up1_membership_agree_check"
-            />
     </RelativeLayout>
     <LinearLayout
         android:layout_gravity="center"
@@ -136,11 +192,12 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="30dp">
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="45dp">
 
         <TextView
+            android:fontFamily="@font/noto_regular"
             android:id="@+id/tv_sign_up1_all_agree"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -150,13 +207,14 @@
            android:text="위 내용에 모두 동의합니다."/>
 
         <CheckBox
+            android:layout_marginTop="6dp"
             android:id="@+id/cb_sign_up1_all_agree_check"
             android:layout_width="25dp"
             android:layout_height="17dp"
             android:layout_alignParentRight="true" />
     </RelativeLayout>
     <TextView
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:id="@+id/tv_sign_up1_next_btn"
         android:layout_gravity="center"
         android:background="@color/colorPrimary"
