--- a/app/src/main/res/layout/activity_sign_up3.xml
+++ b/app/src/main/res/layout/activity_sign_up3.xml
@@ -7,7 +7,9 @@
     android:orientation="vertical"
     android:background="#f9f9f9"
     tools:context=".Moohyeon.Activity.SignUp3Activity">
+
     <TextView
+        android:fontFamily="@font/noto_bold"
         android:layout_width="match_parent"
         android:layout_height="57dp"
         android:background="@drawable/top"
@@ -15,8 +17,9 @@
         android:lineSpacingExtra="6sp"
         android:text="인증번호 입력"
         android:textColor="#000000"
-        android:textSize="14sp" />
+        android:textSize="16sp" />
     <TextView
+        android:fontFamily="@font/noto_regular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
@@ -34,6 +37,7 @@
         android:layout_width="324dp"
         android:layout_height="48dp">
         <TextView
+            android:fontFamily="@font/noto_regular"
             android:id="@+id/tv_sign_up3_confirm_number"
             android:textSize="14dp"
             android:layout_marginLeft="18dp"
@@ -42,6 +46,7 @@
             android:textColor="#000000"
             android:text="인증번호"/>
         <EditText
+            android:fontFamily="@font/noto_regular"
             android:id="@+id/et_sign_up3_confirm_number"
             android:background="@null"
             android:layout_width="wrap_content"
