--- a/app/src/main/res/layout/dialog_password_confirm.xml
+++ b/app/src/main/res/layout/dialog_password_confirm.xml
@@ -6,6 +6,7 @@
             android:layout_width="270dp"
             android:layout_height="142dp">
             <TextView
+                android:fontFamily="@font/noto_bold"
                 android:id="@+id/tv_dialog_password_text1"
                 android:paddingVertical="8dp"
                 android:paddingHorizontal="16dp"
@@ -20,6 +21,7 @@
                 android:textStyle="bold"
                 />
             <TextView
+                android:fontFamily="@font/noto_regular"
                 android:id="@+id/tv_dialog_password_text2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -42,13 +44,14 @@
                 android:background="#bfbfbf"
                 />
             <TextView
+                android:fontFamily="@font/noto_medium"
                 android:id="@+id/tv_dialog_password_text3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingVertical="8dp"
                 android:paddingHorizontal="16dp"
                 android:textSize="16sp"
-                android:textColor="#007aff"
+                android:textColor="@color/colorPrimary"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="6sp"
                 android:text="다시 로그인하기"
