--- a/app/src/main/res/layout/rv_item_detailboard.xml
+++ b/app/src/main/res/layout/rv_item_detailboard.xml
@@ -2,6 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#ededed"
+        android:layout_alignParentTop="true"
+        />
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_marginTop="20dp"
             android:id="@+id/iv_item_detailboard_profile_img"
@@ -19,15 +26,18 @@
             android:layout_alignTop="@+id/iv_item_detailboard_profile_img"
             >
                 <RelativeLayout
-                    android:layout_width="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_width="275dp"
                     android:layout_height="18dp">
                         <TextView
+                            android:fontFamily="@font/noto_medium"
                             android:id="@+id/tv_item_detailboard_profile_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="#222222"
                             android:textSize="12sp"
                             android:text="이충엽"
+                            android:layout_marginTop="-10dp"
                             android:textStyle="bold"
                             android:layout_centerVertical="true"
                             />
@@ -35,12 +45,14 @@
                             android:id="@+id/v_item_detailboard_v"
                             android:layout_toRightOf="@id/tv_item_detailboard_profile_name"
                             android:layout_width="1dp"
-                            android:layout_height="7.6dp"
+                            android:layout_height="13dp"
                             android:layout_marginLeft="7.2dp"
                             android:layout_centerVertical="true"
                             android:background="#999999" />
 
                         <TextView
+                            android:layout_marginTop="-8dp"
+                            android:fontFamily="@font/noto_regular"
                             android:layout_marginLeft="7.8dp"
                             android:layout_toRightOf="@+id/v_item_detailboard_v"
                             android:id="@+id/tv_item_detailboard_time"
@@ -51,7 +63,13 @@
                             android:textSize="10sp"
                             android:text="2018/12/21  18:30" />
 
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true">
                     <TextView
+                        android:layout_marginTop="-8dp"
+                        android:fontFamily="@font/noto_regular"
                         android:id="@+id/iv_item_reboard_like_cnt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -82,10 +100,12 @@
                             android:layout_alignParentRight="true"
                             android:layout_centerVertical="true"
                             />
+                    </RelativeLayout>
                 </RelativeLayout>
         </RelativeLayout>
 
         <TextView
+            android:fontFamily="@font/noto_regular"
             android:layout_marginTop="8dp"
             android:layout_marginStart="65dp"
             android:id="@+id/tv_item_detailboard_contents"
@@ -105,4 +125,5 @@
             android:layout_width="245dp"
             android:layout_height="245dp"
             android:src="@mipmap/ic_launcher_round"/>
+
 </RelativeLayout>
